# pyfuzzer

./: .gitignore  README.md  conftest.py  coverage.sh  poetry.toml  pyproject.toml  requirements.txt  run  test.sh
scripts/: coverage.sh  explain.sh  lint.sh  mutations.sh  poetry.sh  profile.sh  property_test.sh  run.sh  setup.sh  test.sh
src/: config.py  entry.py  fuzzer.py  generators.py  jobqueue.py  main.py  main.py.bkp  minimizer.py  oracle.py  patch.py  randomizer.py  report.py  runner.py  seppuku.py  snapshot.py  utils.py
tests/: test_args.py  test_delta.py  test_generator.py  test_queue.py  test_runner.py  test_seppuku.py  test_utils.py
